chore: performance enhancements applying various language level fixes (#233)
* chore: performance enhancements

- avoid new Boolean
- bulk method call instead of manual op

* chore: performance enhancements 2

- avoid passing fix array size in Collection.toArray calls

* chore: performance enhancements 3

- add break in loops when intended condition matches

* chore: performance enhancements 4

- replace manual array copy with System.arraycopy

* chore: performance enhancements 5

- replace unnecessary calls to Collection.addAll

* chore: performance enhancements 6

- replace unnecessary calls to String.format

* chore: performance enhancements 7

- replace unnecessary manual array to collection copy

* chore: performance enhancements 8

- replace string concatenation in loop with StringBuilder/StringBuffer.append to prevent unnecessary copying of string

* chore: performance enhancements 9

- replace string concatenation with StringBuilder/StringBuffer.append to prevent unnecessary allocations of new Objects

* chore: performance enhancements 10

- replace redundant PrintStream.printf calls with PrintStream.print

* chore: performance enhancements 11

- replace loop which are doing string concat with StringBuffer/Builder/Appendable.append with String.repeat

* chore: replace ternary op with if else